<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDCCD2"
    tools:context=".MainActivity_Fc_Resultado">

    <TextView
        android:id="@+id/fc_resultado_TextViw_saturacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="Saturacion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fc_resultado_TextViw_temperatura"
        app:layout_constraintTop_toBottomOf="@+id/fr_txt_sintomas" />

    <TextView
        android:id="@+id/fc_r_cant_saturacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/cantidad7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fc_r_cant_tenperatura"
        app:layout_constraintTop_toBottomOf="@+id/fc_resultado_TextViw_saturacion" />

    <TextView
        android:id="@+id/fc_resultado_TextView"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="Datos del Paciente"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fc_r_editText_Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:text="Edad:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:text="Nombre:"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/fc_r_editText_Nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_resultado_TextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="Sexo:"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/fc_r_editText_Sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/fc_r_editText_Nombre"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/fc_resultado_TextView" />

    <TextView
        android:id="@+id/fc_r_editText_Edad"
        android:layout_width="265dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/textview3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/fc_r_editText_Nombre" />

    <TextView
        android:id="@+id/fc_r_editText_Sexo"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="22dp"
        android:text="@string/textview5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/fc_r_editText_Edad" />

    <TextView
        android:id="@+id/fc_resultado_TextViw_temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="20dp"
        android:text="Temperatura"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fc_r_cant_tenperatura"
        app:layout_constraintEnd_toStartOf="@+id/fc_resultado_TextViw_saturacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_txt_sintomas" />

    <TextView
        android:id="@+id/fc_r_cant_tenperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cantidad"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_resultado_TextViw_temperatura" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="61dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:text="image"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_r_cant_tenperatura" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="90dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="4dp"
        android:text="Informe"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fc_r_textView_Informe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/fc_r_textView_Informe"
        android:layout_width="337dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textinforme"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:text="Sintomas Presentados"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fr_txt_sintomas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/fr_txt_sintomas"
        android:layout_width="379dp"
        android:layout_height="43dp"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fc_resultado_TextViw_temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

</androidx.constraintlayout.widget.ConstraintLayout>