<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDCCD2"
    tools:context=".Formulario_Covid">

    <Spinner
        android:id="@+id/fc_spinner_sexo"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:entries="@array/OP_SEXO"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_editTextText_Edad" />

    <EditText
        android:id="@+id/fc_editTextText_Edad"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_editTextText_Nombre" />

    <EditText
        android:id="@+id/fc_editTextText_Nombre"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="163dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:text="Sintomas"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_seekBar_saturacion"
        app:layout_constraintVertical_bias="0.051" />

    <SeekBar
        android:id="@+id/fc_seekBar_temperatura"
        android:layout_width="237dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/fc_textView_cantidad_temporatura"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/fc_textView_cantidad_saturacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/TextView2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/fc_seekBar_saturacion"
        app:layout_constraintTop_toBottomOf="@+id/fc_textView_cantidad_temporatura" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_spinner_sexo" />

    <TextView
        android:id="@+id/fc_textView_cantidad_temporatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Saturacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fc_seekBar_temperatura" />

    <Button
        android:id="@+id/fc_button_procesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="MostrarResultado"
        android:text="@string/progesar"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/fc_seekBar_saturacion"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="128dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="128dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="412dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="372dp"
        android:layout_height="216dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fc_button_procesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBoxOp01"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:onClick="Op1"
            android:text="Fiebre"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxOp02"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:onClick="Op2"
            android:text="Perdida Olfato/Gusto"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxOp03"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:onClick="Op3"
            android:text="Tos Seca"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxOp04"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:onClick="Op4"
            android:text="Molestias y Dolores"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBoxOp05"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:onClick="Op5"
            android:text="Diificultad al Respirar"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fc_salida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>